added josi's corrections

--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 % ---------------------------------------------------------------------------
 % IDENTIFICAÇÃO
 % ---------------------------------------------------------------------------
-\titulo{DETERMINAÇÃO DE SÓLIDOS SOLÚVEIS TOTAIS EM MANGAS ATRAVÉS DE PROCESSAMENTO DIGITAL DE IMAGENS}
+\titulo{DETERMINAÇÃO DE SÓLIDOS SOLÚVEIS TOTAIS EM MANGAS PALMER ATRAVÉS DE PROCESSAMENTO DIGITAL DE IMAGENS}
 \autor{DANIELE SILVA REIS}
 \local{JUAZEIRO - BA}
 \orientador{Prof. Dr. Rosalvo Ferreira de Oliveira Neto}
