--- a/tex/introducao.tex
+++ b/tex/introducao.tex
@@ -33,4 +33,4 @@ O objetivo geral do trabalho consiste na identificação de quais atributos de u
 
 \section{Organização do trabalho}
 
-O trabalho possui, além da Introdução, os capítulos de Fundamentação teórica, Materiais e métodos, Resultados e Conclusão. Na fundamentação é discorrido sobre todos os tópicos necessários para o entendimento do trabalho e os artigos selecionados para o estudo. No capítulo de materiais e métodos, é explicada a metodologia a ser aplicada, desde a coleta das mangas até a construção dos modelos preditivos. Os resultados obtidos no trabalho são mostrados no capítulo seguinte e, por fim, no último capítulo é feita uma conclusão sobre o estudo conduzido, assim como potenciais trabalhos futuros.
+O trabalho possui, além da Introdução, os capítulos de Fundamentação teórica, Material e métodos, Resultados e Discussão e Considerações finais e Trabalhos futuros. Na fundamentação é discorrido sobre todos os tópicos necessários para o entendimento do trabalho e os artigos selecionados para o estudo. No capítulo de Material e métodos, é explicada a metodologia a ser aplicada, desde a coleta das mangas até a construção dos modelos preditivos. Os resultados obtidos no trabalho são mostrados no capítulo seguinte e, por fim, no último capítulo é feita uma conclusão sobre o estudo conduzido, assim como potenciais trabalhos futuros.
