--- a/tex/refs.tex
+++ b/tex/refs.tex
@@ -12,7 +12,7 @@
 \noindent ARCO, J. E. et al. Digital image analysis for automatic enumeration of malaria parasites using morphological operations. \textit{Expert Systems with Applications}, v. 42, n. 6, p. 3041-3047, 2015. Disponível em: <www.sciencedirect.com>. Acesso em: 29 jul. 2018.
 \\
 
-\noindent BEDI, S. S.; KHANDELWAL, Rati. Various image enhancement techniques-a critical review. \textit{International Journal of Advanced Research in Computer and Communication Engineering}, v. 2, n. 3, 2013. Disponível em: <https://pdfs.semanticscholar.org>. Acesso em: 29 jul. 2018.
+\noindent BEDI, S. S.; KHANDELWAL, R. Various image enhancement techniques-a critical review. \textit{International Journal of Advanced Research in Computer and Communication Engineering}, v. 2, n. 3, 2013. Disponível em: <https://pdfs.semanticscholar.org>. Acesso em: 29 jul. 2018.
 \\
 
 \noindent BRANCO, Danyelle Karine Santos et al. Comportamento das exportações de manga do Vale Submédio São Francisco: uma abordagem a partir de vetores autorregressivos. \textit{Revista Econômica do Nordeste}, v. 47, n. 4, p. 29-37, 2016. Disponível em: <https://www.bnb.gov.br>. Acesso em: 04 set. 2018.
@@ -111,10 +111,13 @@
 \noindent MIHALOVIC, M. Performance comparison of multiple discriminant analysis and logit models in bankruptcy prediction. \textit{Economics \& Sociology}, v. 9, n. 4, p. 101, 2016. Disponível em: <http://www.economics-sociology.eu>. Acesso em: 17 jul. 2018.
 \\
 
-\noindent MORPHOLOGICAL TRANSFORMATIONS. OpenCV-Python Tutorials. Disponível em: <https://opencv-python-tutroals.readthedocs.io/en/latest/py\_tutorials/py\_imgproc/py\_morphological\_ops/py\_morphological\_ops.html>. Acesso em: 17 jul. 2018.
+\noindent MORPHOLOGICAL TRANSFORMATIONS. OpenCV-Python Tutorials. Disponível em: <https://opencv-python-tutroals.readthedocs.io/en/latest/py\_tutorials/py\_imgproc/
+py\_morphological\_ops/py\_morphological\_ops.html>. Acesso em: 17 jul. 2018.
 \\
 
-\noindent 2-D MEDIAN FILTERING. MathWorks Inc. Disponível em: <https://www.mathworks.com/help/images/ref/medfilt2.html>. Acesso em: 17 jul. 2018.
+\noindent 2-D MEDIAN FILTERING. MathWorks Inc. Disponível em: 
+\\<https://www.mathworks.com/help/images/ref/medfilt2.html>.
+Acesso em: 17 jul. 2018.
 \\
 
 \noindent NADAFZADEH, M.; MEHDIZADEH, S. A.; SOLTANIKAZEMI, M. Development of computer vision system to predict peroxidase and polyphenol oxidase enzymes to evaluate the process of banana peel browning using genetic programming modeling. \textit{Scientia Horticulturae}, v. 231, p. 201-209, 2018. Disponível em: <www.sciencedirect.com>. Acesso em: 27 jul. 2018.
@@ -126,7 +129,8 @@
 \noindent NETO, F. P. L. Novas opções de variedades de mangueira e as vantagens competitivas. In: \textit{Embrapa Semiárido-Artigo em anais de congresso (ALICE). In: FEIRA NACIONAL DA AGRICULTURA IRRIGADA-FENAGRI, 20.}, 2009. Disponível em: <www.alice.cnptia.embrapa.br>. Acesso em: 31 jul. 2018.
 \\
 
-\noindent PAM – \textit{Produção Agrícola Municipal}. Disponível em: <https://sidra.ibge.gov.br/pesquisa/pam>. Acesso em: 08 ago. 2018.
+\noindent PAM – \textit{Produção Agrícola Municipal}. Disponível em: <https://sidra.ibge.gov.br/pesquisa/
+pam>. Acesso em: 08 ago. 2018.
 \\
 
 \noindent PANDEY, R.; GAMIT, N.; NAIK, S. Non-destructive quality grading of mango (Mangifera Indica L) based on CIELab colour model and size. In: \textit{Advanced Communication Control and Computing Technologies (ICACCCT), 2014 International Conference on}. IEEE, 2014. p. 1246-1251. Disponível em: <http://ieeexplore.ieee.org>. Acesso em: 27 jun. 2018.
@@ -138,7 +142,7 @@
 \noindent PRAVEEN, K. S. et al. Implementation Of Image Sharpening And Smoothing Using Filters. \textit{International Journal of Scientific Engineering and Applied Science}, v. 2, n. 1, p. 7-14, 2016. Disponível em: <http://ijseas.com>. Acesso em: 29 jul. 2018.
 \\
 
-\noindent RUSSELL, Stuart J.; NORVIG, Peter. \textit{Artificial intelligence: a modern approach}. Malaysia; Pearson Education Limited,, 2016.
+\noindent RUSSELL, S. J.; NORVIG, P. \textit{Artificial intelligence: a modern approach}. Malaysia; Pearson Education Limited,, 2016.
 \\
 
 \noindent SALUNKHE, R., P.; PATIL, A. A. Image processing for mango ripening stage detection: RGB and HSV method. In: \textit{Image Information Processing (ICIIP), 2015 Third International Conference on}. IEEE, 2015. p. 362-365. Disponível em: <https://ieeexplore.ieee.org/>. Acesso em: 13 jun. 2018.
