working on corrections

--- a/main.tex
+++ b/main.tex
@@ -11,8 +11,8 @@
 	english,			% idioma adicional para hifenização
 	brazil,				% o último idioma é o principal do documento
 	]{abntex2}
-
-% ---------------------------------------------------------------------------
+	
+	% ---------------------------------------------------------------------------
 % Inclui os comandos do projeto
 % ---------------------------------------------------------------------------
 \input{tex/commands}
@@ -24,7 +24,7 @@
 \autor{DANIELE SILVA REIS}
 \local{JUAZEIRO - BA}
 \orientador{Prof. Dr. Rosalvo Ferreira de Oliveira Neto}
-\coorientador{M. Sc.ª Josenara Daiane de Souza Costa}
+\coorientador[Co-Orientadora: ]{M. Sc.ª Josenara Daiane de Souza Costa}
 \instituicao{
 UNIVERSIDADE FEDERAL DO VALE DO SÃO FRANCISCO
 	\par
@@ -53,6 +53,7 @@ CURSO DE GRADUAÇÃO EM ENGENHARIA DE COMPUTAÇÃO}
 
 % Seção quinaria (subsubsubsection) Caixa baixa, sem negrito, tamanho 12
 \renewcommand{\cftparagraphfont}{\normalfont\itshape}
+
 
 % -----------------------------------------------------------------------------
 % Início do TCC 
