--- a/tex/conclusao.tex
+++ b/tex/conclusao.tex
@@ -3,9 +3,9 @@
 %--------------------------------------------------------------------------------------
 \chapter{Considerações Finais e Trabalhos Futuros}
 
-Inicialmente testou-se diferentes técnicas de pré-processamento das imagens em uma sequência bem definida, visando a maior redução possível de ruído. As técnicas que proporcionaram um melhor resultado foram o filtro da mediana, as operações de abertura e fechamento, a limiarização simples e a segmentação de Otsu.
+Com o teste de diferentes técnicas de pré-processamento, visando a maior redução possível de ruído, foi encontrado que as técnicas que proporcionaram um melhor resultado foram o filtro da mediana, as operações de abertura e fechamento, a limiarização simples e a segmentação de Otsu.
 
-Com a extração de atributos e posterior construção dos modelos, concluiu-se, através dos resultados, que é possível determinar sólidos solúveis totais em mangas Palmer com um coeficiente de correlação igual a 0,9789, o maior encontrado na literatura. Enquanto que para os artigos pesquisados foi assumido um relacionamento linear entre as variáveis de entrada e a de saída, no presente estudo foi investigado se um modelo não linear comportaria-se melhor. Através dos resultados obtidos, concluiu-se que, de fato, um modelo não linear apresenta um desempenho melhor. Este resultado pode ser explicado através da inspeção dos atributos mais importantes, que não variam linearmente.
+Com a extração de atributos e posterior construção dos modelos, concluiu-se que é possível determinar sólidos solúveis totais em mangas Palmer com um coeficiente de correlação igual a 0,9789, o maior encontrado na literatura. Enquanto que para os artigos pesquisados foi assumido um relacionamento linear entre as variáveis de entrada e a de saída, no presente estudo foi investigado se um modelo não linear comportaria-se melhor. Através dos resultados obtidos, concluiu-se que, de fato, um modelo não linear apresenta um desempenho melhor. Este resultado pode ser explicado através da inspeção dos atributos mais importantes, que não variam linearmente.
 
 Verificou-se ainda que o espaço de cor mais significante para a determinação de SST é o RGB, em que o canal B se sobressai. A taxa R/B da imagem mostrou-se o mais importante, seguido do coeficiente de correlação e média do canal B nas regiões equatorial e da haste. A partir dessas quatro variáveis, construiu-se um novo modelo RF, em que o coeficiente de correlação foi igual a 0,9752.  
  
