fixed some details

--- a/tex/pretextual.tex
+++ b/tex/pretextual.tex
@@ -87,9 +87,9 @@
 %--------------------------------------------------------------------------------
 % Anexando a ficha catalogáfica e a folha de aprovação 
 %--------------------------------------------------------------------------------
-\includepdf[pages=-]{anexos/ficha.pdf}
+% \includepdf[pages=-]{anexos/ficha.pdf}
 
-\includepdf[pages=-]{anexos/aprovacao.pdf}
+% \includepdf[pages=-]{anexos/aprovacao.pdf}
 
 \setlength{\ABNTEXsignwidth}{12cm}
 
